<resources>
    <string name="app_name">Quotes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Lovely Quotes</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="contact">sandhoshparamasivam@gmail.com</string>
    <string name="about_app">About App</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">Funky Bios</string>
    <string name="slide_1_desc">A Collection of 1000+ Insta Bios !</string>
    <string name="slide_2_title">Cool Status</string>
    <string name="slide_2_desc">Category wise status based on Interests !</string>
    <string name="slide_3_title">Quotes Images</string>
    <string name="slide_3_desc">Quotes written on Images with Beautiful Backgrounds !</string>
    <string name="slide_4_title">Social Share Enabled</string>
    <string name="slide_4_desc">Square sized Images to share directly on your Social Networks !</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="about">Quotes is an Android app developed by Santosh Kumar in 2020. He has taken in the consideration the reviews and
        feedback received from app users to improve the user experience. However now the app has moved under BEINGDEV devs. We are still
        open for suggestion and feedback. Help us sending in your views. \n\n Every week we add new quotes, sayings and Proverbs. Our team constantly
        watches for new status and quotes updates over internet, books, Poems, Speeches, Social Media, Movies, TV etc. \n\n
        If you feel like sharing some quotes or your own writings, send in them via feedback or contact forms !
    </string>
    <string name="Dis">Most of the content of app is contributed by our app users or developers. However, some of the content may have been
    picked up from the Internet. If you see anything in the app or website for which you hold copyright, please inform us immediately.
    We will look formward and remove it if found voilating norms or give you credits.\n\n

    E-Mail: sandhoshparamasivam@gmail.com \n\n
    Content Copyright 2020-21 SandhoshKumar. All Rights Reserved.</string>
    <string name="no">No ! Exit</string>
    <string name="abs">Absolutely</string>
    <string name="yes">Yes</string>
    <string name="version">Version 1.0</string>
    <string name="title_send_feedback">Send feedback</string>
    <string name="mail_feedback_email">Your Email</string>
    <string name="mail_feedback_subject">Title</string>
    <string name="mail_feedback_message">Hi,\n\nYour Feedback sample app rocks! I would like to give you some feedback:</string>
    <string-array name="friendship">
        <item>Friendship is the hardest thing in the world to explain. It’s not something you learn in school. But if you haven’t learned the meaning of friendship, you really haven’t learned anything</item>
        <item>Don’t make friends who are comfortable to be with. Make friends who will force you to lever yourself up.</item>
        <item>The most beautiful discovery true friends make is that they can grow separately without growing apart</item>
        <item>Each friend represents a world in us, a world possibly not born until they arrive, and it is only by this meeting that a new world is born.</item>
        <item>Life is partly what we make it, and partly what it is made by the friends we choose.</item>
        <item>They may forget what you said, but they will never forget how you made them feel.</item>
        <item>Find a group of people who challenge and inspire you; spend a lot of time with them, and it will change your life.</item>
        <item>For beautiful eyes, look for the good in others; for beautiful lips, speak only words of kindness; and for poise, walk with the knowledge that you are never alone</item>
        <item>The best and most beautiful things in the world cannot be seen or even touched — they must be felt with the heart</item>
        <item>A real friend is one who walks in when the rest of the world walks out</item>
        <item>A friend is someone who understands your past, believes in your future, and accepts you just the way you are.</item>
        <item>Growing apart doesn’t change the fact that for a long time we grew side by side; our roots will always be tangled. I’m glad for that.</item>
        <item>Let us be grateful to the people who make us happy; they are the charming gardeners who make our souls blossom.</item>
        <item>Lots of people want to ride with you in the limo, but what you want is someone who will take the bus with you when the limo breaks down</item>
        <item>In the sweetness of friendship let there be laughter, for in the dew of little things the heart finds its morning and is refreshed</item>
        <item>It’s not what we have in life, but who we have in our life that matters.</item>
        <item>To the world you may be just one person, but to one person you may be the world</item>
        <item>A friend is one who overlooks your broken fence and admires the flowers in your garden.</item>
        <item>A friend who understands your tears is much more valuable than a lot of friends who only know your smile</item>
        <item>We weren’t sisters [or brothers] by birth, but we knew from the start…fate brought us together to be sisters [or brothers] by heart</item>
        <item>A friend is one of the best things you can be and the greatest things you can have</item>
        <item>Best friends are the people in your life who make you laugh louder, smile brighter and live better.</item>
        <item>Time doesn’t take away from friendship, nor does separation.</item>
        <item>When the world is so complicated, the simple gift of friendship is within all of our hands.</item>
        <item>There’s not a word yet for old friends who’ve just met</item>
        <item>A single rose can be my garden…a single friend, my world</item>
        <item>Friendship is the only cement that will ever hold the world together</item>
        <item>Friends are those rare people who ask how we are and then wait to hear the answer.</item>
        <item>A friend knows the song in my heart and sings it to me when my memory fails.</item>
        <item>It’s the friends you can call up at 4 a.m. that matter.</item>
        <item>Truly great friends are hard to find, difficult to leave, and impossible to forget.</item>
        <item>A good friend is like a four-leaf clover; hard to find and lucky to have.</item>
        <item>I would rather walk with a friend in the dark, than alone in the light.</item>
        <item>True friends are never apart, maybe in distance but never in heart.</item>
        <item>Sometimes being with your best friend is all the therapy you need.</item>
        <item>Friends are the siblings God never gave us.</item>
        <item>True friends are like diamonds — bright, beautiful, valuable, and always in style.</item>
        <item>There is nothing on this earth more to be prized than true friendship.</item>
        <item>Friends are the family you choose.</item>
        <item>Anything is possible when you have the right people there to support you.</item>
        <item>A sweet friendship refreshes the soul.</item>
        <item>Life was meant for good friends and great adventures.</item>
        <item>True friends are always together in spirit.</item>
        <item>Best friend: the one that you can be mad at only for a short period of time because you have important stuff to tell them.</item>
        <item>You don’t have to be crazy to be my friend. I’ll train you.</item>
        <item>There is nothing better than a friend, unless it is a friend with chocolate.</item>
        <item>Tis the privilege of friendship to talk nonsense, and to have her nonsense respected.</item>
        <item>A true friend is someone who thinks that you are a good egg even though he knows that you are slightly cracked.</item>
        <item>A true friend never gets in your way unless you happen to be going down.</item>
        <item>A best friend is someone who makes you laugh even when you think you’ll never smile again.</item>
        <item>Best friends. Because if anyone else heard our conversations we’d end up in the mental hospital.</item>
    </string-array>
</resources>