<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textSize="20dp"
        android:text="@string/title_send_feedback"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="10dp"
        android:padding="3dp"
        android:visibility="gone"
        android:background="@drawable/drawable_bg_white"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity=""
            android:textColor="@color/black"
            android:text="@string/mail_feedback_email"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:layout_weight="1"
            android:lines="1"
            android:padding="5dp"
            android:id="@+id/email"
            android:textSize="16dp"
            android:textColor="@color/black"
            />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:padding="3dp"
        android:background="@drawable/drawable_bg_white"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:text="@string/mail_feedback_subject"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:text=":"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lines="1"
            android:id="@+id/title"
            android:maxLines="1"
            android:gravity="start"
            android:hint="Enter Your Title"
            android:textColorHint="@color/black"
            android:textSize="16dp"
            android:textColor="@color/black"
            />
  </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:padding="3dp"
        android:background="@drawable/drawable_bg_white"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:text="Message"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:text=":"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Enter Your Message"
            android:layout_weight="1"
            android:textColorHint="@color/black"
            android:lines="5"
            android:gravity="start"
            android:id="@+id/message"
            android:maxLines="1"
            android:textSize="16dp"
            android:textColor="@color/black"
            />
</LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_send"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="Submit"
        />

</LinearLayout>